--- a/website/src/app.html
+++ b/website/src/app.html
@@ -7,6 +7,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%svelte.head%
 	</head>
+	<style>
+		body {
+			font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+		}
+	</style>
 	<body>
 		<div>%svelte.body%</div>
 	</body>
